// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders associated 1`] = `
<div>
  <div
    data-test-subj="mockAssociatedMonitors"
  />
</div>
`;

exports[`Container renders create 1`] = `
<div>
  <div
    data-test-subj="mockAddAlertingMonitor"
  />
</div>
`;
